log
Mon 26 Sep 2022 01:22:34 AM UTC: 
 treemap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c:39:11: error: conflicting types for ‘createTreeMap’
   39 | TreeMap * createTreeMap(int* (lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:11:11: note: previous declaration of ‘createTreeMap’ was here
   11 | TreeMap * createTreeMap(int (*lower_than_int) (void* key1, void* key2));
      |           ^~~~~~~~~~~~~
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:23: error: assignment to ‘int (*)(void *, void *)’ from incompatible pointer type ‘int * (*)(void *, void *)’ [-Werror=incompatible-pointer-types]
   46 |     arbol->lower_than = lower_than;
      |                       ^
test.c: In function ‘create_test1’:
test.c:77:32: error: passing argument 1 of ‘createTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   77 |     TreeMap* t = createTreeMap(lower_than_int);
      |                                ^~~~~~~~~~~~~~
      |                                |
      |                                int (*)(void *, void *)
In file included from test.c:4:
treemap.c:39:31: note: expected ‘int * (*)(void *, void *)’ but argument is of type ‘int (*)(void *, void *)’
   39 | TreeMap * createTreeMap(int* (lower_than) (void* key1, void* key2)) {
      |                         ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0156a6a
Mon 26 Sep 2022 01:22:36 AM UTC: 
In file included from test.c:4:
treemap.c:39:11: error: conflicting types for ‘createTreeMap’
   39 | TreeMap * createTreeMap(int* (lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:11:11: note: previous declaration of ‘createTreeMap’ was here
   11 | TreeMap * createTreeMap(int (*lower_than_int) (void* key1, void* key2));
      |           ^~~~~~~~~~~~~
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:23: error: assignment to ‘int (*)(void *, void *)’ from incompatible pointer type ‘int * (*)(void *, void *)’ [-Werror=incompatible-pointer-types]
   46 |     arbol->lower_than = lower_than;
      |                       ^
test.c: In function ‘create_test1’:
test.c:77:32: error: passing argument 1 of ‘createTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   77 |     TreeMap* t = createTreeMap(lower_than_int);
      |                                ^~~~~~~~~~~~~~
      |                                |
      |                                int (*)(void *, void *)
In file included from test.c:4:
treemap.c:39:31: note: expected ‘int * (*)(void *, void *)’ but argument is of type ‘int (*)(void *, void *)’
   39 | TreeMap * createTreeMap(int* (lower_than) (void* key1, void* key2)) {
      |                         ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
73f2464
Mon 26 Sep 2022 01:22:36 AM UTC: 
In file included from test.c:4:
treemap.c:39:11: error: conflicting types for ‘createTreeMap’
   39 | TreeMap * createTreeMap(int* (lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
In file included from treemap.c:4,
                 from test.c:4:
treemap.h:11:11: note: previous declaration of ‘createTreeMap’ was here
   11 | TreeMap * createTreeMap(int (*lower_than_int) (void* key1, void* key2));
      |           ^~~~~~~~~~~~~
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:23: error: assignment to ‘int (*)(void *, void *)’ from incompatible pointer type ‘int * (*)(void *, void *)’ [-Werror=incompatible-pointer-types]
   46 |     arbol->lower_than = lower_than;
      |                       ^
test.c: In function ‘create_test1’:
test.c:77:32: error: passing argument 1 of ‘createTreeMap’ from incompatible pointer type [-Werror=incompatible-pointer-types]
   77 |     TreeMap* t = createTreeMap(lower_than_int);
      |                                ^~~~~~~~~~~~~~
      |                                |
      |                                int (*)(void *, void *)
In file included from test.c:4:
treemap.c:39:31: note: expected ‘int * (*)(void *, void *)’ but argument is of type ‘int (*)(void *, void *)’
   39 | TreeMap * createTreeMap(int* (lower_than) (void* key1, void* key2)) {
      |                         ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bee8172
